apps/biblora/web/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biblora-web-ingress
  namespace: biblora
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - web.biblora.cc
      secretName: biblora-web-tls
    - hosts:
        - www.biblora.cc
      secretName: biblora-www-tls
    - hosts:
        - biblora.cc
      secretName: biblora-tls
  rules:
    - host: web.biblora.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biblora-web
                port:
                  number: 80
    - host: biblora.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biblora-web
                port:
                  number: 80
    - host: www.biblora.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biblora-web
                port:
                  number: 80
